--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="images/logo.png" alt="" />
         <span>TheWood Furnishing Ltd.</span>
       </div>
-      <a href="contacts.html"><span>Contact</span></a>
+      <a href="contact.html"><span>Contact</span></a>
     </header>
 
     <div id="app">
